# Trabalho_Final_Redes_2026-01

./: .gitignore  PLANO_IMPLEMENTACAO_FRONTEND.md  PLANO_IMPLEMENTACAO_KEYCLOAK.md  README.md  execucao_proxy.md  index.html
DHCP/: RELATORIO_DHCP.md  cliente_dhcp.sh  servidor_dhcp.sh
DNS/: cliente_dns.sh  servidor_dns.sh
Multicast-PPP/: cliente_multicast.sh  roteador_r1.sh  roteador_r2.sh  run.sh  servidor_s.sh
Multicast-PPP/old/: cliente_multicast.sh  roteador_r1.sh  roteador_r2.sh  s.sh  servidor_s.sh
Multicast-PPP/roteador-r1/: r1lan.sh
Multicast-PPP/scripts/roteador-r1/: r1lan.sh  r1nat.sh
NetworkConfig/: run.sh
auth-server/: README.md  docker-compose.yml  realm-mini-iptv.json
backend/: README.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  dependencies.py  main.py  repositories.py  schema.sql
backend/app/routers/: admin.py  channels.py  oauth.py
backend/app/services/: media.py  playlists.py  profiles.py  sessions.py  streaming.py
backend/deploy/: apache-mini-iptv.conf
backend/tests/: conftest.py  test_admin_crud.py  test_admin_dashboard.py  test_auth.py  test_authorization.py  test_channels.py  test_db.py  test_health.py  test_media_metadata.py  test_mvp_flow.py  test_playlists.py  test_profile_rules.py  test_sessions_api.py  test_streaming.py
config smtp e pop3/smtp/: main.cf
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.mjs
frontend/src/: main.tsx  styles.css  vite-env.d.ts
paginas-individuais/: atyrson.html  caio.html  cayo.html  victor.html  yan.html
(+48 files in other folders)
